# zen-reader

./: .env.example  Cargo.toml
frontend/: app.js  index.html  style.css
src/: chunk.rs  komga.rs  main.rs  parser.rs  state.rs
