[package]
name = "zen-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json"] }
epub = "2"
scraper = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
